<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_light_blue"
    android:visibility="visible"
    tools:context=".ui.SchoolDetailsActivity">
<!-- I am using a Relative Layout here just to show that I know how it works. When possible it is
     better to use a Constraint layout for better compatibility with various screen sizes
-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/detail_school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/school"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/detail_school_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_school_name"
            android:gravity="center_horizontal"
            android:text="@string/address"
            android:textColor="@color/bkg_drk_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_school_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_school_address"
            android:gravity="center_horizontal"
            android:text="@string/city"
            android:textColor="@color/bkg_drk_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_school_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_school_city"
            android:gravity="center_horizontal"
            android:text="@string/phone"
            android:textColor="@color/bkg_drk_blue"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/detail_school_phone"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/bkg_drk_blue" />

        <Button
            android:id="@+id/sat_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_centerHorizontal="true"
            android:text="@string/view_sat_scores"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:layout_below="@+id/sat_button"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/detail_school_overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/loading_data"
                android:textColor="@color/bkg_drk_blue" />

            <ProgressBar
                android:id="@+id/show_progress"
                android:visibility="gone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>